# default-hs

./: .gitignore  .gitmodules  Cargo.toml  DefaultHs.cabal  LICENSE  README.md  Sandbox.idr  build  build.sbt  cw_diophantine_equation.cpp  cw_is_my_friend_cheating.cpp  default-hs.cabal  double_acc_test.cpp  double_acc_test_2.cpp  hyper_cal_test.cpp  lg1068.cpp  lg1181.cpp  lg1208.cpp  p1068.cpp  pause.cpp  pe11.cpp  pe5  pe5.cpp  pe68.cpp  pe79.cpp  repl  sandbox-music.cabal  sandbox.cabal  sandbox.ipkg  stack.yaml  vj1001.cpp  vj1772.cpp  vj1848.cpp  vj1911.cpp
Sandbox/: Format.idr  HList.idr  IdMonad.idr  LVect.idr  Lib.idr  Math.idr  Queue.idr  Tuple.idr
app/: Main.hs
bfhs/: BFHS.hs
scripts/: pointer_simulation_system_test_preload.scala  start_cpp_mode.scala
sptt/: SPTT.hs
src/: Chemistry.hs  CodeWars.hs  ContFrac.hs  Dependent.hs  IO.hs  L2.hs  Lambda2.hs  Lib.hs  List.hs  Math.hs  Parser.hs  Patch.hs  ProjectEuler.hs  Scores.hs  Xenharmonic.hs  main.rs
src/Data/: Fin.hs  Nat.hs  Vect.hs
src/Data/Singleton/: SNat.hs
src/Math/: Fin.hs  Nat.hs  Rationa.hs
src/Vijos/: P1042.hs
src/lib/: codewars.rs  guessing_number.rs  mod.rs  pe.rs
src/lib/trpl/: fib.rs  geometry.rs  hashmap.rs  mod.rs  pig_latin.rs  some_syntax.rs  statistics.rs
src/main/scala-2.12/io/github/problem233/default/: package.scala
src/main/scala-2.12/io/github/problem233/default/collection/stack/: Stack.scala  package.scala
src/main/scala-2.12/io/github/problem233/default/collection/string/: package.scala
src/main/scala-2.12/io/github/problem233/default/fun/: package.scala
src/main/scala-2.12/io/github/problem233/default/io/: package.scala
src/main/scala-2.12/io/github/problem233/default/math/: geometry.scala  package.scala
src/main/scala-2.12/io/github/problem233/default/net/: package.scala
src/main/scala-2.12/io/github/problem233/default/simulation/: cppSimulation.scala
src/main/scala-2.12/io/github/problem233/default/simulation/pointerSimulationSystem/: PointerSimulationSystem.scala  Util.scala
src/test/scala-2.12/io/github/problem233/default/: Test.scala
test/: Spec.hs
test-exe/: Test.hs
