name:                DefaultHs
version:             0.1.0.0
synopsis:            Junk code
description:         Please see README.md
homepage:            https://github.com/problem233/DefaultHs#readme
license:             OtherLicense
license-file:        LICENSE
author:              Problem233
maintainer:          problem233@outlook.com
copyright:           2017 Problem233
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable DefaultHs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DefaultHs
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ProjectEuler
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite DefaultHs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DefaultHs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/problem233/DefaultHs
