name: sandbox-music
version: 0.1.0.0
synopsis: Using Haskell to make music
description: Please see README.md
homepage: https://github.com/problem233/sandbox/tree/music#readme
license: BSD3
license-file: LICENSE
author: Problem233
maintainer: problem233@outlook.com
copyright: 2017 Problem233
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
                 , Patch
  build-depends: base >= 4.7 && < 5
               , csound-expression
               , csound-catalog
  default-extensions: LambdaCase OverloadedStrings
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/problem233/sandbox
