name:                sandbox
version:             0.1.0.0
synopsis:            Junk code
description:         Please see README.md
homepage:            https://github.com/problem233/sandbox#readme
license:             OtherLicense
license-file:        LICENSE
author:              Problem233
maintainer:          problem233@outlook.com
copyright:           2017 Problem233
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Math
                     , ProjectEuler
                     , CodeWars
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bfhs
  hs-source-dirs:      bfhs
  main-is:             BFHS.hs
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable sptt
  hs-source-dirs:      sptt
  main-is:             SPTT.hs
  build-depends:       base >= 4.7 && < 5
                     , sandbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite default-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , sandbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/problem233/sandbox
