name:                sandbox
version:             0.1.0.0
synopsis:            Junk code
description:         Please see README.md
homepage:            https://github.com/problem233/sandbox#readme
license:             OtherLicense
license-file:        LICENSE
author:              Problem233
maintainer:          problem233@outlook.com
copyright:           2017 Problem233
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , L2
                     , Dependent
                     , Math
                     , Data.Nat
                     , Data.Fin
                     , Data.Vect
                     , Data.Singleton.SNat
                     , Math.Rationa
                     , Parser
                     , ProjectEuler
                     , CodeWars
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/problem233/sandbox
